--- a/example/package.json
+++ b/example/package.json
@@ -17,6 +17,6 @@
     "npm-run-all": "4.1.5",
     "serve": "13.0.2",
     "vite": "2.9.7",
-    "vite-plugin-elm": "file:../"
+    "vite-plugin-gren": "^0.0.3"
   }
 }
