missing package.json comma

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "Nathan Bleigh <nathan.bleigh@gmail.com>",
     "Nicolas Bétheuil <wadouk@gmail.com>",
     "Shane Kenney <me@shanek.org>",
-    "Gabriela Sartori <gabriela.tsartori@gmail.com>"
+    "Gabriela Sartori <gabriela.tsartori@gmail.com>",
     "Lindsay Wardell <lindsay.wardell@noredink.com>",
     "Andreas Molitor <andreas.molitor@andrena.de>",
     "Dave Keen <dev@ruffness.com>",
